--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -45,10 +45,16 @@ jobs:
         run: |
           docker compose build --build-arg IMAGE_NAME=${{ env.DOCKER_IMAGE_NAME }} --build-arg IMAGE_TAG=${{ env.DOCKER_IMAGE_TAG }}
 
+      - name: Install Trivy CLI
+        run: |
+          sudo apt-get update && sudo apt-get install -y wget
+          wget -qO- https://github.com/aquasecurity/trivy/releases/latest/download/trivy_0.50.2_Linux-64bit.tar.gz | tar zxvf - -C /tmp
+          sudo mv /tmp/trivy /usr/local/bin/
+
       - name: Scan Docker image for vulnerabilities
         id: trivy_scan
         run: |
-          docker run --rm -v /var/run/docker.sock:/var/run/docker.sock aquasec/trivy:latest image --severity HIGH,CRITICAL --exit-code 1 --format table ${{ env.DOCKER_IMAGE_NAME }}:${{ env.DOCKER_IMAGE_TAG }}
+          trivy image --severity HIGH,CRITICAL --exit-code 1 --format table ${{ env.DOCKER_IMAGE_NAME }}:${{ env.DOCKER_IMAGE_TAG }}
 
       - name: Check for vulnerabilities
         if: failure()
@@ -59,7 +65,3 @@ jobs:
       - name: Push images to Docker Hub
         run: |
           docker compose push
-
-      - name: Stop and remove Docker Compose services
-        if: always()
-        run: docker compose down
