--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -47,9 +47,7 @@ jobs:
 
       - name: Install Trivy CLI
         run: |
-          sudo apt-get update && sudo apt-get install -y wget
-          wget -qO- https://github.com/aquasecurity/trivy/releases/latest/download/trivy_0.50.2_Linux-64bit.tar.gz | tar zxvf - -C /tmp
-          sudo mv /tmp/trivy /usr/local/bin/
+          sudo apt-get install -y trivy
 
       - name: Scan Docker image for vulnerabilities
         id: trivy_scan
