--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Build images with Docker Compose
         run: |
-          docker compose build
+          DOCKER_IMAGE_NAME=${{ env.DOCKER_IMAGE_NAME }} DOCKER_IMAGE_TAG=${{ env.DOCKER_IMAGE_TAG }} docker compose build
 
       - name: List Docker images
         run: docker images
