--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -41,12 +41,29 @@ jobs:
       - name: Log in to Docker Hub
         run: echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
 
+      - name: Print Docker Compose config
+        run: |
+          DOCKER_IMAGE_NAME=${{ env.DOCKER_IMAGE_NAME }} DOCKER_IMAGE_TAG=${{ env.DOCKER_IMAGE_TAG }} docker compose config
+
       - name: Build images with Docker Compose
         run: |
           DOCKER_IMAGE_NAME=${{ env.DOCKER_IMAGE_NAME }} DOCKER_IMAGE_TAG=${{ env.DOCKER_IMAGE_TAG }} docker compose build
 
       - name: List Docker images
         run: docker images
+
+      - name: Ensure image is correctly tagged
+        run: |
+          if ! docker images --format '{{.Repository}}:{{.Tag}}' | grep -q "${DOCKER_IMAGE_NAME}:${DOCKER_IMAGE_TAG}"; then
+            # Find the built image (assume service name is mukuru-http)
+            IMAGE_ID=$(docker images --format '{{.Repository}}:{{.ID}}' | grep 'mukuru-http' | head -n1 | awk -F: '{print $2}')
+            if [ -n "$IMAGE_ID" ]; then
+              docker tag $IMAGE_ID ${DOCKER_IMAGE_NAME}:${DOCKER_IMAGE_TAG}
+            else
+              echo "Could not find built image to retag."
+              exit 1
+            fi
+          fi
 
       - name: Install Trivy CLI
         run: |
