--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -41,13 +41,9 @@ jobs:
       - name: Log in to Docker Hub
         run: echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
 
-      - name: Print Docker Compose config
-        run: |
-          DOCKER_IMAGE_NAME=${{ env.DOCKER_IMAGE_NAME }} DOCKER_IMAGE_TAG=${{ env.DOCKER_IMAGE_TAG }} docker compose config
-
       - name: Build images with Docker Compose
         run: |
-          DOCKER_IMAGE_NAME=${{ env.DOCKER_IMAGE_NAME }} DOCKER_IMAGE_TAG=${{ env.DOCKER_IMAGE_TAG }} docker compose build
+          docker compose build
 
       - name: List Docker images
         run: docker images
